<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <RatingBar
        android:id="@+id/rbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:numStars="5"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:stepSize="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/lblTuValoracion"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/txtMostrarValoracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:hint="@string/hintMostrarValor"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/btnVolver" />
</LinearLayout>